# GitHub-Actions-Lab

./: pyproject.toml
.github/workflows/: backend-deployment.yml
backend/: Dockerfile  main.py
streamlit/: Dockerfile  app.py
